--- a/iadsapp/templates/search_results.html
+++ b/iadsapp/templates/search_results.html
@@ -1,38 +1,41 @@
 {% extends 'base.html' %}
-
 {% block title %}
-    Search Results
+Search Results
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="section">
-            <h2 class="header teal-text text-lighten-2">Search Results for "{{ query }}"</h2>
-            <div class="row">
-                <div class="col s12">
-                    <ul class="collection">
-                        {% for result in results %}
-                            <li class="collection-item">
-                                <div class="row">
-                                    <div class="col s3">
-                                        <img src="{{ result.game_image.url }}" alt="{{ result.game_name }}" class="responsive-img">
-                                    </div>
-                                    <div class="col s9">
-                                        <h5>{{ result.game_name }}</h5>
-                                        <p>{{ result.game_production }}</p>
-                                        <p>{{ result.game_release }}</p>
-                                        <p>{{ result.game_platform }}</p>
-                                        <p>{{ result.game_rating }}</p>
-{#                                        <p>{{ result.game_bio }}</p>#}
-                                    </div>
-                                </div>
-                            </li>
-                        {% empty %}
-                            <li class="collection-item">No games found for the selected game type.</li>
-                        {% endfor %}
-                    </ul>
+<div class="container">
+    <div class="section">
+        <h3 style="margin-top: 0;">Search Results for "{{ query }}"</h3>
+
+        <!-- Game List Section -->
+        <div class="row">
+            {% for result in results %}
+                <div class="col s12 m6 l3">
+                    <div class="card" style="height: 365px;">
+                        <div class="card-image" style="height: 200px; width: 100%; overflow: hidden;">
+                            <img src="{{ result.game_image.url }}" alt="{{ result.game_name }}" class="game-image" style="width: 100%; height: auto; object-fit: contain;">
+                        </div>
+                        <div class="card-content" style="height: 150px;">
+                            <span class="card-title" style="font-size: 1rem; font-weight: bold; line-height: 1.25rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;">
+                                <a href="{% url 'game_detail' result.id %}">{{ result.game_name }}</a>
+                            </span>
+{#                            <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">{{ result.game_production }}</p>#}
+                            <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">{{ result.game_release }}</p>
+                            <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">{{ result.game_platform }}</p>
+                            <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">
+                                <span style="color: yellow; font-size: 24px;">&#9733;</span> {{ result.game_rating }}
+                            </p>
+                        </div>
+                    </div>
                 </div>
-            </div>
+                {% if forloop.counter|divisibleby:4 and not forloop.last %}
+                    </div><div class="row">
+                {% endif %}
+            {% empty %}
+                <p>No games found for the selected game type.</p>
+            {% endfor %}
         </div>
     </div>
+</div>
 {% endblock %}
