--- a/iadsapp/templates/profile.html
+++ b/iadsapp/templates/profile.html
@@ -34,20 +34,20 @@
             <div class="card-image">
               <img src="{% static 'img/icons/gamebanner.jpg' %}">
               <img id="img-custom-circle-actor" src="{% static 'img/user.png'%}">
-              <span style="font-size: 30px;" class="card-title">Umer</span>
+              <span style="font-size: 30px;" class="card-title">{{ user.first_name }}</span>
             </div>
           <div class="card-content">
         <div class="row">
           <div class="col s12 m4">
             <ul class="collection with-header">
               <li class="collection-header"><h3>User Information</h3></li>
-              <li class="collection-item">Name<b> Umer </b></li>
-              <li class="collection-item">Email: <a><b>umer@gmail.com/b></a></li>
+              <li class="collection-item">Name:<b>{{ user.first_name }}</b></li>
+              <li class="collection-item">Email: <a><b>{{ user.email }}</b></a></li>
               <li class="collection-item">Bio:<p><b>We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated. </b></p></li>
 
             </ul>
               <a href="{% url 'edit_profile' %}" class="btn">Edit Profile</a>
-              <a href="" class="btn">Logout</a>
+              <a href="{% url 'signout' %}" class="btn">Logout</a>
           </div>
         <div class="col s12 m8 ">
           <ul class="collection">
